--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <input type="checkbox" checked="checked" class="checkbox checkbox-primary" />
                     <h1 class="font-bold text-3xl text-[#1e1e1e]">23</h1>
                 </div>
-                <img class="p-2 bg-indigo-50 rounded-full" src="assets/theme-btn.png" alt="">
+                <button><img class="p-2 bg-indigo-50 rounded-full" src="assets/theme-btn.png" alt=""></button>
             </div>
         </nav>
     </header>
@@ -57,7 +57,7 @@
                             </div>
                             <div class="text-[#00303c]">
                                 <p class="font-medium opacity-80 ">Task Assigned</p>
-                                <h1 class="font-bold text-3xl">05</h1>
+                                <h1 class="font-bold text-3xl">6</h1>
                             </div>
                         </div>
                         <!-- sub card-2 -->
@@ -201,5 +201,12 @@
             </div>
         </div>
     </main>
+
+
+
+    <script src="script/utilities.js"></script>
+    <script src="script/clrhistory.js"></script>
+    <script src="script/completed.js"></script>
+    <script src="script/QA.js"></script>
 </body>
 </html>
