--- a/QA.html
+++ b/QA.html
@@ -34,37 +34,46 @@
                 <h1 class="text-[#00303C] font-light text-4xl">Dev<span class="font-bold">Board</span></h1>
             </div>
             <!-- right side -->
-            <button class="btn text-white bg-[#3752fd] border-none rounded-lg">Back to Desk</button>
+            <button id="QAback" class="btn text-white bg-[#3752fd] border-none rounded-lg">Back to Desk</button>
         </nav>
     </header>
 
     <main class="container mx-auto space-y-4 pb-10">
         <h1 class="text-center font-bold text-2xl ">Blogs</h1>
-        <div>
-            <p class="bg-white p-4 rounded mb-1 font-bold">Question-1: What are the different ways to select an element in the DOM? </p>
-            <p class="bg-white p-4 rounded">There are many different ways to select an element in the DOM. such as
+        <div class="bg-white">
+            <p class="p-4 rounded font-bold">Question-1: What are the different ways to select an element in the DOM? </p>
+            <hr class="border-dashed border-indigo-50">
+            <p class="p-4 rounded">There are many different ways to select an element in the DOM. such as
             1. Id selector
             2. Tag name selector
             3. Class name selector
             4. css style class name selector etc.
             </p>
         </div>
-        <div>
-            <p class="bg-white p-4 rounded mb-1 font-bold">Question-2: What is the difference between innerHTML, innerText, and textContent ?</p>
-            <p class="bg-white p-4 rounded"></p>
+        <div class="bg-white">
+            <p class=" p-4 rounded font-bold">Question-2: What is the difference between innerHTML, innerText, and textContent ?</p>
+            <hr class="border-dashed border-indigo-50">
+            <p class="p-4 rounded"></p>
         </div>
-        <div>
-            <p class="bg-white p-4 rounded mb-1 font-bold">Question-3: What is event delegation in the DOM?</p>
-            <p class="bg-white p-4 rounded"></p>
+        <div class="bg-white">
+            <p class=" p-4 rounded font-bold">Question-3: What is event delegation in the DOM?
+            </p>
+            <hr class="border-dashed border-indigo-50">
+            <p class="p-4 rounded"></p>
         </div>
-        <div>
-            <p class="bg-white p-4 rounded mb-1 font-bold">Question-4: What is event bubbling in the DOM?</p>
-            <p class="bg-white p-4 rounded"></p>
+        <div class="bg-white">
+            <p class=" p-4 rounded font-bold">Question-4: What is event bubbling in the DOM?
+            </p>
+            <hr class="border-dashed border-indigo-50">
+            <p class="p-4 rounded"></p>
         </div>
-        <div>
-            <p class="bg-white p-4 rounded mb-1 font-bold">Question-5: How do you create, add, and remove elements using JavaScript?</p>
-            <p class="bg-white p-4 rounded"></p>
+        <div class="bg-white">
+            <p class=" p-4 rounded font-bold">Question-5: How do you create, add, and remove elements using JavaScript?
+            </p>
+            <hr class="border-dashed border-indigo-50">
+            <p class="p-4 rounded"></p>
         </div>
+
     </main>
 
 
