--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <input type="checkbox" checked="checked" class="checkbox checkbox-primary" />
                     <h1 id="increase" class="font-bold text-3xl text-[#1e1e1e]">23</h1>
                 </div>
-                <button><img class="p-2 bg-indigo-50 rounded-full" src="assets/theme-btn.png" alt=""></button>
+                <button id="randomColor"><img class="p-2 bg-indigo-50 rounded-full" src="assets/theme-btn.png" alt=""></button>
             </div>
         </nav>
     </header>
@@ -62,7 +62,7 @@
                         </div>
                         <!-- sub card-2 -->
                         <div id="QA"
-                            class="p-6 flex w-6/12 items-center gap-5 rounded-2xl bg-gradient-to-r from-[#3752fd] via-[#6c7ffa] to-[#9ba8f8]">
+                            class="p-6 flex w-6/12 items-center gap-5 cursor-pointer rounded-2xl bg-gradient-to-r from-[#3752fd] via-[#6c7ffa] to-[#9ba8f8]">
                             <img src="assets/board.png" alt="">
                             <h1 class="text-white font-medium text-2xl">Discover Something <br>
                                 New Today!</h1>
@@ -192,18 +192,18 @@
         
             <!-- history -->
             <div id="comments" class="p-7 space-y-7 opacity-70">
-                
-                <p class="bg-indigo-50 p-2 rounded-lg">You have Complete The Task Add Dark Mode at 12:48:15 PM</p>
+
             </div>
         </div>
     </main>
 
-
+    <br>
 
     <script src="script/utilities.js"></script>
     <script src="script/clrhistory.js"></script>
     <script src="script/completed.js"></script>
     <script src="script/QA.js"></script>
     <script src="script/date.js"></script>
+    <script src="script/randomColor.js"></script>
 </body>
 </html>
